Minor changes and client moved to separate repo

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "do": "node index",
-    "start": "nodemon index"
+    "start": "node index"
   },
   "author": "",
   "license": "ISC",
